add: login adn fix: filter

--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -229,9 +229,7 @@ select {
 }
 
 .alert-not-available {
-  display: flex;
-  align-items: center;
-  justify-items: center;
+  text-align: center;
 }
 
 /* DASHBOARD */
