--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -291,11 +291,16 @@ select {
 
 @media screen and (max-width: 768px) {
   .body-filter {
-    display: none;
+    width: 100%;
+    position: static;
   }
   .body-users {
     width: 100%;
     margin-left: 0%;
+  }
+  .container-users {
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -382,4 +387,34 @@ select {
 .error {
   background-color: #f8d7da;
   border-bottom: 6px solid #cb0000;
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+.modal-container .text-title {
+  font-size: x-large;
+  font-weight: bold;
+}
+.modal-container .text-body {
+  color: #004fd8;
+  text-decoration: solid;
+  cursor: pointer;
+}
+.modal-container .text-button {
+  padding: 0.5rem 2rem;
+  background-color: #356bc9;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+}
+
+.table-container {
+  overflow: auto;
 }
