add: register and logout

--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -101,12 +101,16 @@ nav .title-navbar {
 }
 nav .item-navbar {
   display: flex;
-  width: 80%;
+  width: 70%;
   gap: 0 2rem;
 }
 nav .item {
   text-decoration: none;
   color: white;
+}
+nav .item-logout {
+  width: 10%;
+  cursor: pointer;
 }
 
 .body-component {
